Tue Jul 29 01:18:08 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (move->fdes, dup->port): use dup->fdes, not primitive-dup.
	(dup->fdes): deleted, now done in C.

Sat Jul 26 08:00:42 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (setenv): new procedure, scsh compatible.

Sat Jul 26 21:30:10 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (with-fluids): New macro to go with the
 	builtin `with-fluids*'.

Thu Jul 24 04:28:11 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* slib.scm (install-require-module): In newer versions of slib
	*catalog* is #f until the first access.  Therefore we call
	require:provided? for a random feature if *catalog* is #f.

Wed Jul 23 20:13:04 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: If using emacs interface, enable backtraces
	automatically.

Mon Jul 21 06:45:45 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (dup->port, dup->inport, dup->outport, dup->fdes,
	dup, fdes->inport, fdes->outport, port->fdes): new procedures.
	(duplicate-port): was a C primitive, now it's here.
	(move->fdes): allow the first argument to be a file descriptor.
	Return the modified port or file descriptor (was unspecified.)

Fri Jul 11 00:13:43 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Changes to compile under gnu-win32, from Marcus Daniels:
	* boot-9.scm (load-user-init): If HOME is unset, provide
	a default of /.

	* boot-9.scm (define-public): Changed to accomodate Hobbit.

Tue Jun 24 00:31:47 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* boot-9.scm, debug.scm, hcons.scm, lineio.scm, mapping.scm,
 	poe.scm, slib.scm, tags.scm, threads.scm: Use normal list
	notation, instead of #/ notation.

	* expect.scm (expect-strings): Pass regexp/newline flag to
	make-regexp.

Mon Jun 23 16:13:38 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Fix inconsistencies in parsing of #/ style lists.
	* boot-9.scm (read-path-list-notation): New function.
	(parse-path-symbol): Deleted.  Replaced by above.